Added a header for the page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+    <header>
+        <h1>Peter Reijerkerk</h1>
+    </header>
     
 </body>
 
