--- a/contact.html
+++ b/contact.html
@@ -3,49 +3,85 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Contact me!</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <title>Contact Me</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="header-container">
-        <header>
-            Peter Reijerkerk
-        </header>
-
-        <nav>
-            <ul>
-                <li class="border"><a href="index.html">About</a></li>
-                <li class="border"><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
+   <!--navbar-container-->
+   <nav class="navbar navbar-default navbar-expand-lg ">
+    <a class="navbar-brand" href="index.html">Peter Reijerkerk</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">About Me 
+                    <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact Me</a>
+                </li>
             </ul>
-        </nav>
+        </div>
+</nav> 
+
+    <!--Form-Container-->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <form>
+                    <div class="form-group">
+                        <label for="exampleInputName">Name</label>
+                        <input type="text" class="form-control" id="exampleInputname" placeholder="Enter Name">
+                        </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail">Email</label>
+                        <input type="email" class="form-control" id="exampleInputEmail" placeholder="Enter Email">
+                        </div>
+                     <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Message</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                 </form>
+            </div>
+        </div>
     </div>
 
-    <div class="main-container">
-        <section id="contact-form">
-            <form id="contact" action="login.php" method="post">
-                <label for="name">Name</label><br>
-                <input type="text" name="name" placeholder="John Doe"><br>
-                <label for="email">Email</label><br>
-                <input type="text" name="email" placeholder="example@email.com"><br>
-                <label for"textfield">Message</label><br>
-                <textarea id="textfield" rows="7"></textarea><br>
-                <button class="btn" type="submit" name="submit">Submit</button>
-            </form>
-        </section>
-
-        <section id="social-links">
-            <h3>Social Media</h3>
-            <ul>
-                <!--Insert relevant social media links here-->
-                <li><a href="https://github.com/PReijerkerk"><img class="icon" src="assets/images/GitHub.png" alt="Github Profile"></a></li>
-                <li><a href="https://www.linkedin.com/in/peter-reijerkerk-13a51a102/"><img class="icon" src="assets/images/LinkedIn-Logo-500x500.png" alt="LinkedIn Profile"></a></li>
-                <li><a href="https://stackoverflow.com/users/9817168/p-reijerkerk"><img class="icon" src="assets/images/Stackoverflow.png" alt="Stackoverflow Profile"></a></li>
-            </ul>
-        </section>
+    <!--Social-Links-Container-->
+    <div class="col-sm-2">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Social Media</h3>
+                </div>
+                <div class="panel-body">
+                    <ul class="list-group list-inline">
+                        <li class="list-group-item"><a href="https://github.com/PReijerkerk"><img class="icon" src="assets/images/GitHub.png" alt="Github Profile"></a></li>
+                        <li class="list-group-item"><a href="https://www.linkedin.com/in/peter-reijerkerk-13a51a102/"><img class="icon" src="assets/images/LinkedIn-Logo-500x500.png" alt="LinkedIn Profile"></a></li>
+                        <li class="list-group-item"><a href="https://stackoverflow.com/users/9817168/p-reijerkerk"><img class="icon" src="assets/images/Stackoverflow.png" alt="Stackoverflow Profile"></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <footer>&#9400; Copyright 2018 Peter Reijerkerk</footer>
+       
+    <footer class="footer-copyright text-center fixed-bottom">
+        <div class="container">
+            <span>&#9400; Copyright 2018 Peter Reijerkerk</span>
+        </div>
+    </footer>
 </body>
+
 </html>
