--- a/index.html
+++ b/index.html
@@ -3,45 +3,134 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>My Portfolio</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
+    <title>About Me</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 
 <body>
-    <div class="header-container">
-        <header>
-            Peter Reijerkerk
-        </header>
+    <!--navbar-->
+   <!-- <nav class="navbar navbar-default navbar-expand-lg">
+        <a class="navbar-brand" href="index.html">Peter Reijerkerk</a>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
+                    <span class="navbar-toggler-icon">Toggle Navigation</span>
+                </button>
+            </div>
 
-        <nav>
-            <ul>
-                <li class="border"><a href="index.html">About</a></li>
-                <li class="border"><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+            <div class="collapse navbar-collapse" id="navbar-collapse-example">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active">
+                        <a href="index.html">About Me
+                            <span class="sr-only">(Current)</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact Me</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>-->
+
+    <nav class="navbar navbar-default navbar-expand-lg ">
+        <a class="navbar-brand" href="index.html">Peter Reijerkerk</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">About Me 
+                        <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact Me</a>
+                    </li>
+                </ul>
+            </div>
+    </nav> 
+
+    <!--Main-Container-->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 well">
+                <div class="page-header">
+                    <h1>About Me</h1>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4 col-md-4">
+                        <img src="assets/images/biopicture.jpg" alt="bio picture" class="img-thumbnail pull-left">
+                    </div>
+                    <div class="col-sm-8 col-md-8">
+                        <p>
+                            I'm an accountant working in the automotive remarketing industry based in the Raleigh NC area. While I have limited coding
+                            experience besides helping with QA questions regarding procedural, I've been dabbling in tutorials
+                            on code academy and udemy for the past year. I'm in this bootcamp program in order to grow my
+                            coding skillset to hopefully transition into a new field that I am passionate about.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Social-Links-Container-->
+        <div class="col-sm-2">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Social Media</h3>
+                </div>
+                <div class="panel-body">
+                    <ul class="list-group list-inline">
+                        <li class="list-group-item">
+                            <a href="https://github.com/PReijerkerk">
+                                <img class="icon" src="assets/images/GitHub.png" alt="Github Profile">
+                            </a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="https://www.linkedin.com/in/peter-reijerkerk-13a51a102/">
+                                <img class="icon" src="assets/images/LinkedIn-Logo-500x500.png" alt="LinkedIn Profile">
+                            </a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="https://stackoverflow.com/users/9817168/p-reijerkerk">
+                                <img class="icon" src="assets/images/Stackoverflow.png" alt="Stackoverflow Profile">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div class="main-container">
-        <section id="main-bio">
-            <h2>About Me</h2>
-            <!---remember to remove this image before submitting to BCS-->
-            <img id="bio-image" src="assets/images/biopicture.jpg" alt="Peter Reijerkerk">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc efficitur libero et sollicitudin finibus. Morbi nec risus nec justo interdum sollicitudin sed pellentesque risus. Integer velit lectus, hendrerit at ipsum ac, dapibus pretium mauris. Sed id nisi lacus. Donec non vulputate quam. Quisque massa diam, vehicula eu augue a, dictum feugiat lacus. Maecenas et magna ut velit maximus interdum. Vivamus vehicula ultricies mauris, vitae sagittis felis luctus et. Vivamus mattis sapien a tincidunt porttitor. Quisque eleifend purus hendrerit nibh pharetra, quis ultrices ante aliquam. Nam nec leo et lacus sagittis ultricies tristique a nunc. Nulla imperdiet rutrum vestibulum. Phasellus eget augue laoreet arcu dictum porttitor in eget justo. Maecenas ut massa eu dolor efficitur tempor sit amet non risus.
-            </p>
-        </section>
+    <footer class="footer-copyright text-center fixed-bottom">
+        <div class="container-footer">
+            <div class="row">
+                <div class="col-md-12">
+                    <span>&#9400; Copyright 2018 Peter Reijerkerk</span>
+                </div>
+            </div>
 
-        <section id="social-links">
-            <h3>Social Media</h3>
-            <ul>
-                <li><a href="https://github.com/PReijerkerk"><img class="icon" src="assets/images/GitHub.png" alt="Github Profile"></a></li>
-                <li><a href="https://www.linkedin.com/in/peter-reijerkerk-13a51a102/"><img class="icon" src="assets/images/LinkedIn-Logo-500x500.png" alt="LinkedIn Profile"></a></li>
-                <li><a href="https://stackoverflow.com/users/9817168/p-reijerkerk"><img class="icon" src="assets/images/Stackoverflow.png" alt="Stackoverflow Profile"></a></li>
-            </ul>
-        </section>
-    </div>
-    
-    <footer>&#9400; Copyright 2018 Peter Reijerkerk</footer>
+        </div>
+    </footer>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
