added in the link to GifTastic week 6 assignment to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
                         <a href="https://preijerkerk.github.io/TriviaGame/"><img class="img-thumbnail project" src="assets/images/Earbuds.jpeg" alt="project 1"><span class="project-title">Trivia Game</span></a>
                     </div>
                     <div class="col-md-6">
-                        <img class="img-thumbnail project" src="assets/images/Earbuds.jpeg" alt="project 1"><span class="project-title">Rutgers Info Widget</span>
+                        <a href="https://preijerkerk.github.io/GifTastic/"><img class="img-thumbnail project" src="assets/images/Earbuds.jpeg" alt="GifTastic"><span class="project-title">GifTastic</span></a>
                     </div>
                 </div>
                 <div class="row">
