updated my completed projects and included links to the deployed versions of my newest projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,10 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <img class="img-thumbnail project" src="assets/images/Earbuds.jpeg" alt="project 1"><span class="project-title">Rock Paper Scissors</span>
+                        <a href="https://preijerkerk.github.io/Train-Scheduler/"><img class="img-thumbnail project" src="assets/images/Earbuds.jpeg" alt="project 1"><span class="project-title">Train-Scheduler</span></a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="https://torre-matthew.github.io/Git-Lit/"><img class="img-thumbnail project" src="assets/images/Earbuds.jpeg" alt="project 1"><span class="project-title">Git Lit</span></a>
                     </div>
                 </div>
     </div>
