--- a/portfolio.html
+++ b/portfolio.html
@@ -65,6 +65,12 @@
                         <a href="https://torre-matthew.github.io/Git-Lit/"><img class="img-thumbnail project" src="assets/images/Earbuds.jpeg" alt="project 1"><span class="project-title">Git Lit</span></a>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <a href="https://preijerkerk.github.io/liri-node-app/"><img class="img-thumbnail project" src="assets/images/Earbuds.jpeg" alt="project 1"><span class="project-title">LIRI-Bot</span></a>
+                    </div>
+                    
+                </div>
     </div>
     
     <!--Social-Links-Container-->
