changed liri-node-app link to the github page for cloning

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <a href="https://preijerkerk.github.io/liri-node-app/"><img class="img-thumbnail project" src="assets/images/Earbuds.jpeg" alt="project 1"><span class="project-title">LIRI-Bot</span></a>
+                        <a href="https://github.com/PReijerkerk/liri-node-app"><img class="img-thumbnail project" src="assets/images/Earbuds.jpeg" alt="project 1"><span class="project-title">LIRI-Bot</span></a>
                     </div>
                     
                 </div>
