Added in Bamazon app to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,6 +69,9 @@
                     <div class="col-md-6">
                         <a href="https://github.com/PReijerkerk/liri-node-app"><img class="img-thumbnail project" src="assets/images/Earbuds.jpeg" alt="project 1"><span class="project-title">LIRI-Bot</span></a>
                     </div>
+                    <div class="col-md-6">
+                        <a href="https://github.com/PReijerkerk/Bamazon"><img class="img-thumbnail project" src="assets/images/Earbuds.jpeg" alt="project 1"><span class="project-title">Bamazon</span></a>
+                    </div>
                     
                 </div>
     </div>
