added in burger assignment

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,6 +72,11 @@
                     <div class="col-md-6">
                         <a href="https://github.com/PReijerkerk/Bamazon"><img class="img-thumbnail project" src="assets/images/Earbuds.jpeg" alt="project 1"><span class="project-title">Bamazon</span></a>
                     </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <a href="https://github.com/PReijerkerk/Burger"><img class="img-thumbnail project" src="assets/images/Earbuds.jpeg" alt="project 1"><span class="project-title">Eat-The-Burger</span></a>
+                    </div>
                     
                 </div>
     </div>
